More flexible profile hash